--- a/TA-SecOnion_Hunting/default/data/ui/views/zeek_ntlm_overview.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/zeek_ntlm_overview.xml
@@ -1,5 +1,5 @@
 <form version="1.1" theme="dark">
-  <label>Zeek NTLM (V2.0.2)</label>
+  <label>Zeek NTLM Overview (V2.0.2)</label>
   <description>V2 Additions: Dashboard Now Rides The Zeek_Suite Datamodel</description>
   <search id="BaseSearch">
     <query>| tstats summariesonly=f count from datamodel=Zeek_Suite.NTLM by NTLM.domainname,NTLM.server_tree_name,NTLM.server_dns_computer_name,NTLM.src_ip,NTLM.dest_ip,NTLM.username, _time
