--- a/TA-SecOnion_Hunting/default/data/ui/views/zeek_smtp_overview.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/zeek_smtp_overview.xml
@@ -14,7 +14,7 @@
       <single>
         <title>Total SMTP Logs (Excluding Known Scanners)</title>
         <search>
-          <query>| tstats summariesonly=f count from datamodel=Zeek_Suite.SMTP</query>
+          <query>| tstats summariesonly=t count from datamodel=Zeek_Suite.SMTP</query>
           <earliest>$time.earliest$</earliest>
           <latest>$time.latest$</latest>
         </search>
@@ -28,7 +28,7 @@
       <table>
         <title>Subject Field Overview</title>
         <search>
-          <query>| tstats summariesonly=f count from datamodel=Zeek_Suite.SMTP by SMTP.subject,SMTP.id_orig_h, SMTP.src_user, SMTP.id_resp_h, SMTP.recipient
+          <query>| tstats summariesonly=t count from datamodel=Zeek_Suite.SMTP by SMTP.subject,SMTP.id_orig_h, SMTP.src_user, SMTP.id_resp_h, SMTP.recipient
 | rename SMTP.subject AS subject, SMTP.id_orig_h AS id.orig_h, SMTP.src_user AS src_user, SMTP.id_resp_h AS id.resp_h, SMTP.recipient AS recipient
 
 | sort -count
@@ -47,7 +47,7 @@
       <table>
         <title>Last Reply Overview</title>
         <search>
-          <query>| tstats summariesonly=f count from datamodel=Zeek_Suite.SMTP by SMTP.last_reply, SMTP.id_orig_h, SMTP.src_user, SMTP.id_resp_h, SMTP.recipient
+          <query>| tstats summariesonly=t count from datamodel=Zeek_Suite.SMTP by SMTP.last_reply, SMTP.id_orig_h, SMTP.src_user, SMTP.id_resp_h, SMTP.recipient
 | rename SMTP.last_reply AS last_reply, SMTP.id_orig_h AS id.orig_h, SMTP.src_user AS src_user, SMTP.id_resp_h AS id.resp_h, SMTP.recipient AS recipient
 
 | where !like (last_reply, "%Queued mail for delivery") AND !like (last_reply, "%2.0.0 Service closing transmission channel") AND !like(last_reply, "220 2.0.0 SMTP server ready")
