--- a/TA-SecOnion_Hunting/default/data/ui/views/zeek_snmp_overview.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/zeek_snmp_overview.xml
@@ -2,7 +2,7 @@
   <label>Zeek SNMP Overview (V2.0.1)</label>
   <description>V2 Additions: Dashboard Now Rides The Zeek_Suite Datamodel</description>
   <search id="BaseSearch">
-    <query>| tstats summariesonly=f count from datamodel=Zeek_Suite.SNMP by SNMP.community, SNMP.src_ip, SNMP.dest_ip, SNMP.display_string, _time
+    <query>| tstats summariesonly=t count from datamodel=Zeek_Suite.SNMP by SNMP.community, SNMP.src_ip, SNMP.dest_ip, SNMP.display_string, _time
 | rename SNMP.community AS community, SNMP.src_ip AS src, SNMP.dest_ip AS dest, SNMP.display_string AS display_string</query>
     <progress>
       <unset token="Loading"></unset>
