--- a/TA-SecOnion_Hunting/default/data/ui/views/zeek_ssh_overview.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/zeek_ssh_overview.xml
@@ -2,7 +2,7 @@
   <label>Zeek SSH Overview (V2.0.3)</label>
   <description>V2 Additions: Dashboard Now Rides The Zeek_Suite Datamodel</description>
   <search id="BaseSearch">
-    <query>| tstats summariesonly=f count from datamodel=Zeek_Suite.SSH by SSH.client, SSH.src_ip, SSH.dest_ip, SSH.dest_port, SSH.server, _time
+    <query>| tstats summariesonly=t count from datamodel=Zeek_Suite.SSH by SSH.client, SSH.src_ip, SSH.dest_ip, SSH.dest_port, SSH.server, _time
 | rename SSH.client AS client, SSH.src_ip AS id.orig_h, SSH.dest_ip AS id.resp_h, SSH.dest_port AS port, SSH.server AS server</query>
     <earliest>$time.earliest$</earliest>
     <latest>$time.latest$</latest>
